--- a/assets/css/com.css
+++ b/assets/css/com.css
@@ -66,11 +66,11 @@ td {
 }
 
 td {
-  padding: 9.5px;
+  padding: 2.5px;
 }
 
 tr {
-  padding: 9.5px 0;
+  padding: 2.5px 0;
 }
 
 .fb-comments-comment-img {
@@ -132,17 +132,17 @@ tr {
 
 .fb-comments-comment-actions likes {
   font-size: 13px;
-  background: url(https://i.imgur.com/S3EfNqk.png);
+  background: url(https://cloudcode.site/likes.png);
   background-repeat: no-repeat;
   padding-left: 43px;
   padding-right: 6px;
-  padding-top: 10px;
+  padding-top: 3px;
   padding-bottom: 2px;
-  margin-top: -30px;
+  margin-top: -10px;
   float: right;
   background-color: #fff;
   border: solid #eaebef;
-  border-radius: 9px;
+  border-radius: 19px;
 }
 
 .fb-comments-comment-actions date {
